[tool.poetry]
name = "overtrack-cv"
version = "0.1.0"
description = ""
authors = ["Simon Pinfold <simon@uint8.me>"]

[tool.poetry.dependencies]
python = "^3.7.4, <3.9"
tabulate = "^0.8.7"

opencv-python = "^4.0"
tesserocr = [
    { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.4.0-tesseract-4.0.0/tesserocr-2.4.0-cp36-cp36m-win_amd64.whl", markers = "sys_platform == 'win32' and python_version >= '3.6' and python_version < '3.7'" },
    { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.4.0-tesseract-4.0.0/tesserocr-2.4.0-cp37-cp37m-win_amd64.whl", markers = "sys_platform == 'win32' and python_version >= '3.7' and python_version < '3.8'" },
    { markers = "sys_platform == 'linux'", version = "^2.4.0" }
]
python-Levenshtein = "^0.12.1"
requests = "^2.25.1"
tflit = "^0.0.16"
tqdm = "^4.57.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
matplotlib = "^3.3.4"

[tool.black]
line-length = 115

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
